// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arc Component should render correct color by default 1`] = `
.css-8plr4h,
[data-css-8plr4h] {
  fill: none;
  stroke-width: 12px;
  stroke: lightgrey;
}

<path
  class="css-8plr4h"
  d="M 205.1056516 79.0983006 A 100 100 0 0 0 127.3648178 11.5192247"
/>
`;

exports[`Arc Component should render correct color when completed 1`] = `
.css-zw8vjp,
[data-css-zw8vjp] {
  fill: none;
  stroke-width: 12px;
  stroke: lime;
}

<path
  class="css-zw8vjp"
  d="M 205.1056516 79.0983006 A 100 100 0 0 0 127.3648178 11.5192247"
/>
`;

exports[`Arc Component should render correct color when failed 1`] = `
.css-1tskx0m,
[data-css-1tskx0m] {
  fill: none;
  stroke-width: 12px;
  stroke: tomato;
}

<path
  class="css-1tskx0m"
  d="M 205.1056516 79.0983006 A 100 100 0 0 0 127.3648178 11.5192247"
/>
`;
